<resources>
    <string name="app_name">URGaining</string>
    <string name="facebook_app_id">130439840871072</string>
    <string name="fb_login_protocol_scheme">fb116526152373574</string>

    <string name="workout_plans">Workouts</string>
    <string name="workout">Workout</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="total_placeholder">0kg total.</string>

    <string name="workout_name">Name your workout:</string>
    <string name="workout_hint">Name</string>
    <string name="create_button">Create</string>

    <string name="exercise_name">Exercise name:</string>
    <string name="set_count">Amount of sets:</string>

    <string name="exercise_name_placeholder">Exercise</string>
    <string name="weight">Weight</string>
    <string name="values_hint">0</string>

    <string name="reset_button">Reset\nWorkout</string>

    <string name="add_values_button">Finish</string>
    <string name="deload_button">Deload</string>
    <string name="search">Search</string>
    <string name="user">User</string>

    <string name="deload">Deload Amount</string>
    <string name="max_training_sessions">Max amount of training \nsessions saved</string>
    <string-array name="amount_training_sessions_saved">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>All</item>
    </string-array>
    
    <string name="color_spinner">Wähle ein Farbschema </string>
    <string-array name="color_array">
        <item>Normal</item>
        <item>Dark</item>
        <item>Pink</item>
    </string-array>
    
</resources>
