<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="janbiko.urgaining.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_placeholder"
        android:textSize="17sp"
        android:fontFamily="monospace"
        android:background="#88FF0000"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/StandardButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/workouts_button"
        android:text="@string/workout_plans"
        android:fontFamily="monospace"
        android:textSize="25sp"
        android:layout_marginTop="25dp"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/StandardButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/progress_button"
        android:text="@string/progress"
        android:fontFamily="monospace"
        android:textSize="25sp"
        android:layout_marginTop="25dp"/>

    <Button
    style="@style/Widget.AppCompat.Button.Colored"
    android:theme="@style/StandardButton"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:id="@+id/settings_button"
    android:text="@string/settings"
    android:fontFamily="monospace"
    android:textSize="25sp"
    android:layout_marginTop="25dp"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/StandardButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/quit_button"
        android:text="@string/quit"
        android:fontFamily="monospace"
        android:textSize="25sp"
        android:layout_marginTop="25dp"/>

</LinearLayout>
