<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/workout_name"
                android:layout_weight="1"
                android:textSize="12sp"
                android:ellipsize="end"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="12sp"
                android:maxLines="1"
                android:hint="@string/workout_hint"/>
        </LinearLayout>

        <Button
            android:id="@+id/create_workout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/create_button" />

    </RelativeLayout>


</RelativeLayout>